# StudentKitULPGC

./: .gitignore  README.md  asignatura.py  package-lock.json  package.json  profesorado - Official.py  profesorado.json  profesorado.py  profesorado_combinados.py  profesorado_no_dis.py  scrapperAsignaturas - Official.py  server.js  teachers.json
djangoStudentkit/: db.sqlite3  mail.json  manage.py  models.py  package-lock.json  pyproject.toml
djangoStudentkit/Schedules/: models.py
djangoStudentkit/Schedules/migrations/: 0001_initial.py
djangoStudentkit/Subjects/: models.py
djangoStudentkit/Teachers/: models.py  serializers.py  urls.py  views.py
djangoStudentkit/Users/: views.py
djangoStudentkit/config/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
djangoStudentkit/config/settings/: __init__.py  base.py  local.py  production.py
djangoStudentkit/djangoStudentkit/: asgi.py  settings.py  urls.py  wsgi.py
djangoStudentkit/schedules/: models.py  serializers.py  urls.py  views.py
djangoStudentkit/schedules/migrations/: 0001_initial.py  0002_alter_subjectschedules_unique_together_and_more.py  0002_initial.py  0003_remove_userschedules_schedulepath.py  0003_schedule_title.py  0004_remove_schedule_events_event_schedule.py  0005_remove_event_id_event_subject_code.py  0006_event_id_alter_event_subject_code.py  (+7 more)
djangoStudentkit/subjects/: models.py  serializers.py  urls.py  views.py
djangoStudentkit/teachers/: models.py  serializers.py  urls.py  views.py
djangoStudentkit/users/: authentication.py  models.py  serializers.py  urls.py  views.py
(+220 files in other folders)
