[tool.poetry]
name = "djangostudentkit"
version = "0.1.0"
description = ""
authors = ["eduetopa <eduetopa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
mysql = "^0.0.3"
django-cors-headers = "^3.14.0"
rest-framework-simplejwt = "^0.0.2"
djangorestframework-simplejwt = "^5.2.2"
drf-nested-routers = "^0.93.4"
django-rest-auth = "^0.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
